Implement functionality and REST endpoints for importing data on demand